# ft_fox

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: Batch.hpp  Camera.hpp  Color.hpp  Config.hpp  Core.hpp  Device.hpp  Driver.hpp  File.hpp  Input.hpp  Math.hpp  Pixmap.hpp  Shader.hpp  Texture.hpp
core/src/: Batch.cpp  Color.cpp  Device.cpp  Driver.cpp  File.cpp  Input.cpp  Math.cpp  Pixemap.cpp  Shader.cpp  Texture.cpp  data.cc
ft_vox/: CMakeLists.txt  lsan.supp
ft_vox/src/: Chunk.cpp  Chunk.hpp  ChunkMesh.cpp  ChunkMesh.hpp  PerlinNoise.cpp  PerlinNoise.hpp  PlayerPhysics.hpp  World.cpp  World.hpp  main.cpp
